feat(*): migrate to new variant
